--- a/css/base.css
+++ b/css/base.css
@@ -154,7 +154,8 @@ img {
     color: var(--color-secondary-red);
     opacity: 0;
     font-size: 0.6rem;
-    padding-block: 0.8rem;
+    padding: 0.8rem 1rem;
+    text-align: left;
 }
 
 .show-card-form-error-message {
@@ -201,7 +202,6 @@ img {
     
     .card-form-error-message {
         font-size: 0.8rem;
-        padding-block: 0.8rem;
     }
 
     .card-form-button {
@@ -277,7 +277,7 @@ img {
 
     .card-form-error-icon {
         width: 25px;
-        inset: 0 0 0 0;
+        inset: 0;
         margin: auto 130px auto auto;
     }
     
